# quiz

./: .dir-locals.el  README.md
algorithm/ex_palindromes/: CMakeLists.txt
algorithm/ex_palindromes/src/: main.cpp
algorithm/gameOfThrone/: CMakeLists.txt
algorithm/gameOfThrone/src/: main.cpp
algorithm/gridChallenge/: CMakeLists.txt
algorithm/gridChallenge/src/: main.cpp
algorithm/markAndToys/: CMakeLists.txt
algorithm/markAndToys/src/: main.cpp
algorithm/rotateMatrix/: CMakeLists.txt
algorithm/rotateMatrix/src/: main.cpp
algorithm/sherlockAndMiniMax/: CMakeLists.txt
algorithm/sherlockAndMiniMax/src/: main.cpp
algorithm/spiralMatrix/: CMakeLists.txt
algorithm/spiralMatrix/src/: main.cpp
algorithm/sqrt/: CMakeLists.txt
algorithm/sqrt/src/: main.cpp
